--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Выпускной проект для LoftSchool",
   "main": "gulpfile.js",
   "dependencies": {
+    "gulp-cheerio": "^0.6.2",
+    "gulp-svg-sprite": "^1.3.7",
+    "gulp-svgmin": "^1.2.4",
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
