--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "uglifyjs-webpack-plugin": "^1.1.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack"
   },
   "keywords": [],
   "author": "",
